[package]
name = "local-event"
version = "0.1.0"
edition = "2024"
authors = ["George Miao <gm@miao.dev>"]
license = "MIT"
description = "Single-threaded version of `event_listener`"
repository = "https://github.com/George-Miao/local-event"

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
